# kaggle_digit_recognizer

./: .gitignore  README.md  pyproject.toml
digit_recognizer/: __init__.py  answer.py  info.py
