[tool.poetry]
name = "digit_recognizer"
version = "0.1.0"
description = ""
authors = ["mosh <mosh21168@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
pandas = "^0.25"
tensorflow-gpu = "^1.14"
Keras = "^2.2"
scikit-learn = "^0.21.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
